# crispy-doom

./: CMakeLists.txt
.github/workflows/: main.yml
opl/: CMakeLists.txt  ioperm_sys.cpp  ioperm_sys.h  opl.cpp  opl.h  opl3.cpp  opl3.h  opl_internal.h  opl_linux.cpp  opl_obsd.cpp  opl_queue.cpp  opl_queue.h  opl_sdl.cpp  opl_timer.cpp  opl_timer.h  opl_win32.cpp
opl/examples/: droplay.cpp
pcsound/: pcsound.cpp  pcsound.h  pcsound_bsd.cpp  pcsound_internal.h  pcsound_linux.cpp  pcsound_sdl.cpp  pcsound_win32.cpp
src/: CMakeLists.txt  aes_prng.cpp  aes_prng.h  crispy.cpp  crispy.h  crispy.hpp  d_dedicated.cpp  d_event.cpp  d_event.h  d_event.hpp  d_iwad.cpp  d_iwad.h  d_loop.cpp  d_loop.h  d_mode.cpp  d_mode.h  d_mode.hpp  d_ticcmd.h  d_ticcmd.hpp  deh_defs.h  deh_defs.hpp  deh_io.cpp  deh_io.h  deh_main.cpp  deh_main.h  deh_main.hpp  deh_mapping.cpp  deh_mapping.h  deh_mapping.hpp  deh_str.cpp  deh_str.h  deh_str.hpp  deh_text.cpp  doomtype.h  doomtype.hpp  gusconf.cpp  gusconf.h  i_cdmus.cpp  i_cdmus.h  i_endoom.cpp  (+113 more)
src/doom/: CMakeLists.txt  actions.hpp  am_map.cpp  d_englsh.hpp  d_items.cpp  d_items.hpp  d_main.cpp  d_main.hpp  d_net.cpp  d_player.hpp  d_pwad.cpp  d_textur.hpp  d_think.hpp  deh_ammo.cpp  deh_bexincl.cpp  deh_bexpars.cpp  deh_bexptr.cpp  deh_bexstr.cpp  deh_cheat.cpp  deh_doom.cpp  deh_frame.cpp  deh_misc.cpp  deh_ptr.cpp  deh_sound.cpp  deh_thing.cpp  deh_weapon.cpp  doom_icon.cpp  doomdata.hpp  doomdef.hpp  doomstat.cpp  doomstat.hpp  dstrings.cpp  f_finale.cpp  f_finale.hpp  f_wipe.cpp  g_game.cpp  g_game.hpp  hu_lib.cpp  hu_lib.hpp  hu_stuff.cpp  (+74 more)
src/doom/files/: files.hpp
src/doom/memory/: memory.hpp
src/heretic/: CMakeLists.txt  am_map.cpp  ct_chat.cpp  d_main.c  d_main.cpp  d_net.c  d_net.cpp  deh_frame.cpp  deh_htext.c  deh_htext.cpp  deh_htic.cpp  deh_sound.c  deh_sound.cpp  deh_weapon.cpp  doomdef.h  doomdef.hpp  dstrings.h  dstrings.hpp  f_finale.cpp  g_game.c  g_game.cpp  in_lude.cpp  info.c  info.cpp  mn_menu.c  mn_menu.cpp  p_enemy.c  p_enemy.cpp  p_extnodes.cpp  p_inter.cpp  p_map.c  p_map.cpp  p_maputl.c  p_maputl.cpp  p_mobj.c  p_mobj.cpp  p_pspr.cpp  p_saveg.cpp  p_setup.c  p_setup.cpp  (+30 more)
src/hexen/: CMakeLists.txt  a_action.c  a_action.cpp  am_map.cpp  ct_chat.cpp  d_net.c  d_net.cpp  f_finale.cpp  g_game.c  g_game.cpp  h2_main.cpp  h2def.h  h2def.hpp  in_lude.cpp  mn_menu.c  mn_menu.cpp  p_anim.c  p_anim.cpp  p_enemy.c  p_enemy.cpp  p_inter.c  p_inter.cpp  p_maputl.cpp  p_mobj.c  p_mobj.cpp  p_pspr.c  p_pspr.cpp  p_setup.c  p_setup.cpp  p_sight.cpp  p_spec.c  p_spec.cpp  p_user.c  p_user.cpp  po_man.c  po_man.cpp  r_bmaps.c  r_bmaps.cpp  r_bsp.c  r_bsp.cpp  (+23 more)
src/memory/: lump.hpp  memory.hpp
src/setup/: accessibility.cpp  compatibility.cpp  display.cpp  execute.c  execute.cpp  joystick.c  joystick.cpp  joystick.hpp  keyboard.c  keyboard.cpp  mainmenu.c  mainmenu.cpp  mode.cpp  mouse.c  mouse.cpp  multiplayer.c  multiplayer.cpp  sound.c  sound.cpp  txt_joyaxis.c  txt_joyaxis.cpp  txt_joyaxis.hpp  txt_joybinput.cpp  txt_keyinput.c  txt_keyinput.cpp  txt_mouseinput.c  txt_mouseinput.cpp
src/strife/: CMakeLists.txt  am_map.c  am_map.cpp  d_items.cpp  d_main.c  d_main.cpp  d_main.h  d_main.hpp  d_net.c  d_net.cpp  d_player.h  d_player.hpp  d_textur.hpp  deh_ammo.cpp  deh_cheat.c  deh_cheat.cpp  deh_frame.cpp  deh_misc.c  deh_misc.cpp  deh_ptr.cpp  deh_sound.c  deh_strife.cpp  deh_thing.cpp  deh_weapon.cpp  doomdata.h  doomdata.hpp  doomdef.h  doomdef.hpp  doomstat.cpp  doomstat.h  doomstat.hpp  f_finale.c  f_finale.cpp  f_finale.hpp  f_wipe.cpp  g_game.c  g_game.cpp  g_game.h  g_game.hpp  hu_lib.c  (+96 more)
textscreen/: txt_button.cpp  txt_button.h  txt_checkbox.cpp  txt_checkbox.h  txt_conditional.cpp  txt_conditional.h  txt_desktop.cpp  txt_desktop.h  txt_dropdown.cpp  txt_dropdown.h  txt_dropdown.hpp  txt_fileselect.cpp  txt_fileselect.h  txt_gui.cpp  txt_gui.h  txt_inputbox.cpp  txt_inputbox.h  txt_io.cpp  txt_io.h  txt_label.cpp  txt_label.h  txt_main.h  txt_main.hpp  txt_radiobutton.cpp  txt_radiobutton.h  txt_scrollpane.cpp  txt_scrollpane.h  txt_sdl.cpp  txt_sdl.h  txt_sdl.hpp  txt_separator.cpp  txt_separator.h  txt_spinctrl.cpp  txt_spinctrl.h  txt_spinctrl.hpp  txt_strut.cpp  txt_strut.h  txt_table.cpp  txt_table.h  txt_utf8.cpp  (+8 more)
textscreen/examples/: calculator.cpp  guitest.cpp
win32/: win_opendir.cpp
